objects/Consultant__c.object
<CustomObject>
    <version>54.0</version>
    <description>Related to opportunity, tracks summary info such as estimated, quoted and actual durations.</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Opportunity_Name__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
 <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Customer_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the customer name</inlineHelpText>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Effort_Hrs__c</fullName>
        <label>Estimated Effort (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Opportunity</inlineHelpText>
        <label>Opportunity Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Customer_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity_Name__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Carried_Over_Hrs__c</fullName>
        <label>Time Carried Over (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
         <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Customer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>